--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=ackerman
 
 spring.jpa.show-sql=true
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
