--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=ackerman
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.jackson.date-format=yyyy-MM-dd
